# pyvcd_parse

./: pyproject.toml
src/pyvcd_parser/: __init__.py  vcd_parser.py
